--- a/Web-Game-V1/index.html
+++ b/Web-Game-V1/index.html
@@ -18,7 +18,7 @@
         <nav>
             <div id="navbar" class="navbar">
                 <a href="index.html" id="title">Math Multiplication Game</a>
-                <a href="#">Player Stats</a>
+                <a href="./playerStats.html">Player Stats</a>
             </div>
         </nav>
     </header>
