--- a/Web-Game-V1/index.html
+++ b/Web-Game-V1/index.html
@@ -18,7 +18,8 @@
         <nav>
             <div id="navbar" class="navbar">
                 <a href="index.html" id="title">Math Multiplication Game</a>
-                <a href="playerStats.html">Player Stats</a>
+               <!--scrapped the 2 webpage idea-->
+               <!-- <a href="">Player Stats</a> -->
             </div>
         </nav>
     </header>
